--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,20 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline text-purple-600">Hello world!</h1>
+    <nav class="bg-blue-600">
+      <div class="container mx-auto px-2 py-4 flex justify-between">
+        <div>
+          <h1>DevTamin</h1>
+        </div>
+        <div>
+          <ul class="flex space-x-4">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Course</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
