--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class="bg-blue-600">
-      <div class="container mx-auto px-2 py-4 flex justify-between">
-        <div>
-          <h1>DevTamin</h1>
+    <nav class="bg-#ffffff py-4">
+      <div class="container mx-auto px-2 flex justify-between">
+        <div class="">
+          <h1 class="text-3xl font-pacifico">DevTamin</h1>
         </div>
         <div>
-          <ul class="flex space-x-4">
+          <ul class="flex space-x-4 text-lg">
             <li><a href="#">Home</a></li>
             <li><a href="#">Course</a></li>
             <li><a href="#">Blog</a></li>
@@ -30,5 +30,22 @@
         </div>
       </div>
     </nav>
+    <section id="banner" class="bg-indigo-800 py-16 px-2">
+      <div class="container mx-3 flex">
+        <div class="w-1/2">
+          <h2>On Sale $94.4</h2>
+          <h3>Welcome to Devtamin</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit tortor,
+            neque auctor sit. Sit id non odio dolor, tellus non eu. Praesent
+            ultrices feugiat vestibulum, suspendisse.
+          </p>
+          <a href="">Take a Course Now</a>
+        </div>
+        <div class="w-1/2">
+          <img src="../imgs/banner.png" alt="banner" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
