--- a/src/index.html
+++ b/src/index.html
@@ -31,20 +31,58 @@
       </div>
     </nav>
     <section id="banner" class="bg-indigo-800 py-16 px-2">
-      <div class="container mx-3 flex">
-        <div class="w-1/2">
-          <h2>On Sale $94.4</h2>
-          <h3>Welcome to Devtamin</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit tortor,
-            neque auctor sit. Sit id non odio dolor, tellus non eu. Praesent
-            ultrices feugiat vestibulum, suspendisse.
-          </p>
-          <a href="">Take a Course Now</a>
+      <div class="container mx-auto px-2 flex">
+        <div class="w-1/2 flex flex-col justify-center">
+          <div class="pr-6">
+            <h3 class="text-red-600 text-xl uppercase">On Sale $94.4</h3>
+            <h1 class="text-white font-bold text-3xl py-3">
+              Welcome to Devtamin
+            </h1>
+            <p class="text-white pb-4">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit
+              tortor, neque auctor sit. Sit id non odio dolor, tellus non eu.
+              Praesent ultrices feugiat vestibulum, suspendisse.
+            </p>
+            <a
+              href=""
+              class="bg-red-600 text-white border-black border-2 rounded-sm px-2 py-1"
+              >Take a Course Now</a
+            >
+          </div>
         </div>
         <div class="w-1/2">
-          <img src="../imgs/banner.png" alt="banner" />
+          <img src="../imgs/banner.png" alt="banner" class="w-full" />
         </div>
+      </div>
+    </section>
+
+    <section id="latest-courses" class="py-16">
+      <div class="container mx-auto px-2">
+        <h2 class="text-3xl font-bold mb-10">Latest Courses</h2>
+        <div class=" flex gap-6 ">
+          <div class="w-1/3 shadow-lg rounded-lg overflow-hidden">
+            <img class="w-full" src="../imgs/java.png" alt="">
+            <div class=" px-4 py-6">
+              <h4 class=" font-bold mb-2">Learn Basic Java From Experts</h4>
+              <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac tempus elementum ultricies nulla lorem non.</p>
+              <a href="#" class=" bg-red-600 inline-block px-4 py-2 text-sm text-white  ">Take a Course</a>
+            </div>
+          </div>
+          <div class="w-1/3 shadow-lg rounded-lg overflow-hidden">
+            <img class="w-full" src="../imgs/php.png" alt="">
+            <div class=" px-4 py-6">
+              <h4 class=" font-bold mb-2">Learn Basic PHP From Experts</h4>
+              <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac tempus elementum ultricies nulla lorem non.</p>
+              <a href="#" class=" bg-red-600 inline-block px-4 py-2 text-sm text-white  ">Take a Course</a>
+            </div>
+          </div><div class="w-1/3 shadow-lg rounded-lg overflow-hidden">
+            <img class="w-full" src="../imgs/blockchain.png" alt="">
+            <div class=" px-4 py-6">
+              <h4 class=" font-bold mb-2">Learn Block Chain Technology</h4>
+              <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac tempus elementum ultricies nulla lorem non.</p>
+              <a href="#" class=" bg-red-600 inline-block px-4 py-2 text-sm text-white  ">Take a Course</a>
+            </div>
+          </div>
       </div>
     </section>
   </body>
