--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,13 @@
       rel="stylesheet"
     />
     <link href="/dist/output.css" rel="stylesheet" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -59,31 +65,128 @@
     <section id="latest-courses" class="py-16">
       <div class="container mx-auto px-2">
         <h2 class="text-3xl font-bold mb-10">Latest Courses</h2>
-        <div class=" flex gap-6 ">
+
+        <div class="flex gap-6">
           <div class="w-1/3 shadow-lg rounded-lg overflow-hidden">
-            <img class="w-full" src="../imgs/java.png" alt="">
-            <div class=" px-4 py-6">
-              <h4 class=" font-bold mb-2">Learn Basic Java From Experts</h4>
-              <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac tempus elementum ultricies nulla lorem non.</p>
-              <a href="#" class=" bg-red-600 inline-block px-4 py-2 text-sm text-white  ">Take a Course</a>
+            <img class="w-full" src="../imgs/java.png" alt="" />
+            <div class="px-4 py-6">
+              <h4 class="font-bold mb-2">Learn Basic Java From Experts</h4>
+              <p class="mb-2">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                ac tempus elementum ultricies nulla lorem non.
+              </p>
+              <a
+                href="#"
+                class="bg-red-600 inline-block px-4 py-2 text-sm text-white"
+                >Take a Course</a
+              >
             </div>
           </div>
+
           <div class="w-1/3 shadow-lg rounded-lg overflow-hidden">
-            <img class="w-full" src="../imgs/php.png" alt="">
-            <div class=" px-4 py-6">
-              <h4 class=" font-bold mb-2">Learn Basic PHP From Experts</h4>
-              <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac tempus elementum ultricies nulla lorem non.</p>
-              <a href="#" class=" bg-red-600 inline-block px-4 py-2 text-sm text-white  ">Take a Course</a>
-            </div>
-          </div><div class="w-1/3 shadow-lg rounded-lg overflow-hidden">
-            <img class="w-full" src="../imgs/blockchain.png" alt="">
-            <div class=" px-4 py-6">
-              <h4 class=" font-bold mb-2">Learn Block Chain Technology</h4>
-              <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac tempus elementum ultricies nulla lorem non.</p>
-              <a href="#" class=" bg-red-600 inline-block px-4 py-2 text-sm text-white  ">Take a Course</a>
+            <img class="w-full" src="../imgs/php.png" alt="" />
+            <div class="px-4 py-6">
+              <h4 class="font-bold mb-2">Learn Basic PHP From Experts</h4>
+              <p class="mb-2">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                ac tempus elementum ultricies nulla lorem non.
+              </p>
+              <a
+                href="#"
+                class="bg-red-600 inline-block px-4 py-2 text-sm text-white"
+                >Take a Course</a
+              >
             </div>
           </div>
+
+          <div class="w-1/3 shadow-lg rounded-lg overflow-hidden">
+            <img class="w-full" src="../imgs/blockchain.png" alt="" />
+            <div class="px-4 py-6">
+              <h4 class="font-bold mb-2">Learn Block Chain Technology</h4>
+              <p class="mb-2">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                ac tempus elementum ultricies nulla lorem non.
+              </p>
+              <a
+                href="#"
+                class="bg-red-600 inline-block px-4 py-2 text-sm text-white"
+                >Take a Course</a
+              >
+            </div>
+          </div>
+        </div>
       </div>
     </section>
-  </body>
+
+    <section id="feedback" class="bg-red-600 py-11 text-white">
+      <div class="container mx-auto py-2">
+        <h2 class="text-3xl font-bold mb-4 text-center pb-4">
+          Student Feedbacks
+        </h2>
+        <p class="text-center px-24">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur
+          vitae quis justo, ut purus felis. Nam molestie nisi, viverra aliquet.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur
+          vitae quis justo, ut purus felis. Nam molestie nisi, viverra aliquet.
+        </p>
+
+        <div class="flex mx-auto">
+          <div class="w-1/3 text-center p-12">
+            <div class="flex justify-center mb-5">
+              <img src="../imgs/st1.png" alt="student-1" class="" />
+            </div>
+            <h5 class="mb-2 font-bold">Jonh Lexa</h5>
+            <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit.”</p>
+            <div class="space-x2 text-yellow-400">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </div>
+          <div class="w-1/3 text-center p-12">
+            <div class="flex justify-center mb-5">
+              <img src="../imgs/st2.png" alt="student-1" class="" />
+            </div>
+            <h5 class="mb-2 font-bold">Mandy Moore</h5>
+            <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit.”</p>
+            <div class="space-x2 text-yellow-400">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </div>
+          <div class="w-1/3 text-center p-12">
+            <div class="flex justify-center mb-5">
+              <img src="../imgs/st3.png" alt="student-1" class="" />
+            </div>
+            <h5 class="mb-2 font-bold">Joaco Bahia</h5>
+            <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit.”</p>
+            <div class="space-x2 text-yellow-400">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+    <section id="about-us" class="py-16">
+      <div class="container mx-auto py-2 flex">
+        <div class="w-1/2 flex flex-col justify-center px-16">
+          <h2 class=" text-center font-bold text-3xl pb-4">About Us</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sagittis ultrices sed pellentesque dictumst sem risus quis. Iaculis diam consectetur eleifend purus sed eu. Molestie congue elementum nulla nulla faucibus faucibus. Sit in nunc purus, vulputate.</p>
+        </div>
+        <div class="w-1/2 relative">
+          <img src="../imgs/about-us.png" class=" w-full relative z-10">
+          <div class="bg-indigo-900 h-full w-full absolute top-6 -left-6"></div>
+        </div>
+      </div>
+    </section>
 </html>
